fix: fix adaptive layout bugs

--- a/src/pages/movie/components/similarMovies/SimilarMovies.module.css
+++ b/src/pages/movie/components/similarMovies/SimilarMovies.module.css
@@ -13,6 +13,7 @@
 }
 
 .link {
+  color: var(--text-color);
   text-decoration: none;
   display: flex;
   transition: scale 0.3s ease;
@@ -24,4 +25,11 @@
   @media (max-width: em(745)) {
     scale: none;
   }
+}
+
+.image-layout {
+  width: em(150);
+  height: em(200);
+  background-color: var(--mantine-color-dark-8);
+  align-items: center;
 }
